implement Write page with a simple layout and API POST call

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/react": "^2.0.0-beta.108",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
     "@types/styled-components": "^5.1.25",
     "next": "12.1.5",
     "react": "18.0.0",
